Revision history for {{$dist->name}}

{{$NEXT}}

1.87      2016-02-10 11:31:10 -0500
  - Updated my dists to latest  

1.86      2016-02-04 11:05:06 -0500
  - Updated my dists to latest  

1.85      2016-01-29 17:09:23 -0500
  - Add App::Ack back in
  - Updated my dists to latest  

1.84      2016-01-20 17:13:32 -0500
  - Add Test::Script::Async
  - Updated my dists to latest  

1.83      2016-01-14 14:11:58 -0500
  - Remove File::IgnoreReadonly
  - Add Test::Clustericious::Blocking
  - Updated my dists to latest

1.82      2016-01-06 07:38:17 -0500
  - Updated my dists to latest

1.81      2015-12-29 14:00:45 -0500
  - Added Text::Hunspell::FFI
  - Updated my dists to latest
  - Replace JSON::XS with Cpanel::JSON::XS

1.80      2015-12-26 07:42:04 -0700
  - Added Test::Alien and Alien::libtool24
  - Updated my dists to latest
  - Drop AnyEvent::WebSocket::Client on < 5.10
  - Drop Validate::Tiny on < 5.10
  - Drop Yars::Command::yars_exercise on < 5.10.1

1.79      2015-12-13 05:14:44 -0500
  - Updated my dists to latest
  - Added Test::Exec

1.78      2015-12-11 13:57:25 -0500
  - Updated my dists to latest

1.77      2015-12-09 20:39:07 -0500
  - Updated my dists to latest

1.76      2015-12-07 11:15:47 -0500
  - Tweak mod_perl exclusions

1.75      2015-12-07 09:27:58 -0500
  - Exclusion for windows: Rose::DB, Rose::DB::Object, Term::EditLine, 
    Alien::Libbz2

1.74      2015-12-07 09:20:00 -0500
  - Add some MSWin32 exclusions
  - Updated my dists to latest

1.73      2015-11-20 17:47:27 -0500
  - Remove Scalar::Does
  - Updated my dists to latest

1.72      2015-11-06 08:37:50 -0500
  - Added PlugAuth::Client::Tiny::Apache2AuthenHandler
  - Added Yars::Command::yars_exercise
  - Updated my dists to latest

1.71      2015-10-16 09:52:07 -0400
  - Updated my dists to latest

1.70      2015-09-17 06:47:31 -0400
  - Updated my dists to latest

1.69      2015-09-10 21:17:50 -0400
  - Updated my dists to latest
  - Added Alien.pm
